// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPreviewButton render() should render currentPostLink otherwise 1`] = `
<ForwardRef(Button)
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1"
  isLarge={true}
  onClick={[Function]}
  target="wp-preview-1"
>
  Preview
  <span
    className="screen-reader-text"
  >
    (opens in a new tab)
  </span>
  <WithSelect(WithDispatch(DotTip))
    tipId="core/editor.preview"
  >
    Once you’ve drafted some content, use the “Preview” button to see how it will look to readers. When you’re ready to add it to your site, use the “Publish” button.
  </WithSelect(WithDispatch(DotTip))>
</ForwardRef(Button)>
`;

exports[`PostPreviewButton render() should render previewLink if provided 1`] = `
<ForwardRef(Button)
  className="editor-post-preview"
  disabled={false}
  href="https://wordpress.org/?p=1&preview=true"
  isLarge={true}
  onClick={[Function]}
  target="wp-preview-1"
>
  Preview
  <span
    className="screen-reader-text"
  >
    (opens in a new tab)
  </span>
  <WithSelect(WithDispatch(DotTip))
    tipId="core/editor.preview"
  >
    Once you’ve drafted some content, use the “Preview” button to see how it will look to readers. When you’re ready to add it to your site, use the “Publish” button.
  </WithSelect(WithDispatch(DotTip))>
</ForwardRef(Button)>
`;
